# venvcache

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md  justfile
.circleci/: config.yml
scripts/: install_sqlite3.sh
src/: file_lock.rs  journal.rs  main.rs  venv.rs
