[package]
name = "venvcache"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = "0.4.31"
fd-lock = "4.0.2"
log = "0.4.21"
pretty_env_logger = "0.5.0"
rusqlite = { version = "0.31.0", features = ["bundled", "chrono"] }
sha256 = { version = "1.5.0", default-features = false }
structopt = "0.3.26"
thiserror = "1.0.58"

[dev-dependencies]
tempdir = "0.3.7"
